syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "TowerCurLevelRecord.proto";

message TowerCurLevelRecordChangeNotify {
	enum CmdId {
		option allow_alias = true;
		NONE = 0;
		ENET_CHANNEL_ID = 0;
		ENET_IS_RELIABLE = 1;
		CMD_ID = 2489;
	}

	TowerCurLevelRecord cur_level_record = 1;
}
